--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# Visual Studio / C# specific
+.vs/
+bin/
+obj/
+*.user
+*.suo
+*.sln.docstates
